--- a/CleanArchMvc.WebUI/appsettings.json
+++ b/CleanArchMvc.WebUI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=cleanarchteste;Integrated Security=True;TrustServerCertificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
