Implementação do Token JWT

--- a/CleanArchMvc.API/appsettings.json
+++ b/CleanArchMvc.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=cleanarchteste;Integrated Security=True;TrustServerCertificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "Jwt": {
+    "SecretKey": "9xoyLZz4eahX56DQ4xdQChdGx4TdhoN",
+    "Issuer": "edenalencar",
+    "Audience":  "github.com/edenalencar"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
